feat: Add empty layout
The layout is built on three parts
 - left and right are for growing
 - mid one is for the content

Add layout info to README

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	</head>
 
 	<body>
-			
+			<div class="layout">
+				<div class="empty"></div>
+				<div class="content"></div>
+				<div class="empty"></div>
+			</div>
 	</body>
 </html>
