feat: Add header for navigation
The website has ususal navigational links like
a logo and some header links.

fix: Remove anchor tag styles for beauty
fix: Remove font-size from body to customize

Add header info in readme

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 	<body>
 			<div class="layout">
 				<div class="empty"></div>
-				<div class="content"></div>
+				<div class="content">
+
+					<div class="header">
+					<nav>
+						<div class="header-logo"><a href="#">Header Logo</a></div>
+						<ul>
+							<li><a href="#">header link one</a></li>
+							<li><a href="#">header link one</a></li>
+							<li><a href="#">header link one</a></li>
+						</ul>
+					</nav>
+					</div>
+
+				</div>
 				<div class="empty"></div>
 			</div>
 	</body>
