--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 					</nav>
 					</div>
 
+					<div class="hero">
+						<div class="hero-content">
+							<div class="left-side">
+								<div>
+									<h1>This website is awesome</h1>
+									<p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+								</div>
+								<button>Sign up</button>
+							</div>
+							<div class="right-side"></div>
+						</div>
+					</div>
+
 				</div>
 				<div class="empty"></div>
 			</div>
