--- a/index.html
+++ b/index.html
@@ -7,36 +7,65 @@
   </head>
 
   <body>
-    <div class="layout">
-      <div class="empty"></div>
-      <div class="content">
+  <div class="top-layout">
+    <div class="empty" ></div>
+    <div class="content">
 
-        <div class="header">
-        <nav>
-          <div class="header-logo"><a href="#">Header Logo</a></div>
-          <ul>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link one</a></li>
-          </ul>
-        </nav>
-        </div>
+      <div class="header">
+      <nav>
+        <div class="header-logo"><a href="#">Header Logo</a></div>
+        <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link one</a></li>
+        </ul>
+      </nav>
+      </div>
 
-        <div class="hero">
-          <div class="hero-content">
-            <div class="left-side">
-              <div>
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-              </div>
-              <button>Sign up</button>
+      <div class="hero">
+        <div class="hero-content">
+          <div class="left-side">
+            <div>
+              <h1>This website is awesome</h1>
+              <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             </div>
-            <div class="right-side"></div>
+            <button>Sign up</button>
           </div>
+          <div class="right-side"></div>
         </div>
-
-        </div>
-      <div class="empty"></div>
+      </div>
     </div>
+    <div class="empty"></div>
+  </div>
+
+  <div class="layout-2">
+    <div class="empty-2"></div>
+    <div class="content-2">
+      <div class="info">
+        <div class="info-title">
+          <h2>Some random information.</h2>
+        </div>
+        <ul>
+          <li>
+            <div class="img-back"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </li>
+          <li>
+            <div class="img-back"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </li>
+          <li>
+            <div class="img-back"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </li>
+          <li>
+            <div class="img-back"></div>
+            <p>this is some subtext under an illustration or image</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="empty-2"></div>
+  </div>
   </body>
 </html>
