--- a/index.html
+++ b/index.html
@@ -78,5 +78,21 @@
     </div>
     <div class="empty-3"></div>
   </div>
+
+  <div class="layout-4">
+    <div class="empty-4"></div>
+    <div class="content-4">
+      <div class="cta">
+        <div class="cta-back">
+          <div class="cta-text">
+            <p class="cta-title">Call to action! It's time!</p>
+            <p class="cta-desc">Sign up for our product by clicking that button right over there!</p>
+          </div>
+          <button>Sign up</button>
+        </div>
+      </div>
+    </div>
+    <div class="empty-4"></div>
+  </div>
   </body>
 </html>
