--- a/index.html
+++ b/index.html
@@ -94,5 +94,9 @@
     </div>
     <div class="empty-4"></div>
   </div>
+
+  <div class="footer">
+    <p>Copyright &copy; The Odin Project 2021</p>
+  </div>
   </body>
 </html>
