--- a/index.html
+++ b/index.html
@@ -7,96 +7,87 @@
   </head>
 
   <body>
-  <div class="top-layout">
-    <div class="empty" ></div>
-    <div class="content">
+    <div class="layout l1">
+      <div class="content-1">
+        <div class="header">
+        <nav>
+          <div class="header-logo"><a href="#">Header Logo</a></div>
+          <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link one</a></li>
+          </ul>
+        </nav>
+        </div>
 
-      <div class="header">
-      <nav>
-        <div class="header-logo"><a href="#">Header Logo</a></div>
-        <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link one</a></li>
-        </ul>
-      </nav>
+        <div class="hero">
+          <div class="hero-content">
+            <div class="left-side">
+              <div>
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+              </div>
+              <button>Sign up</button>
+            </div>
+            <div class="right-side"></div>
+          </div>
+        </div>
       </div>
+    </div>
 
-      <div class="hero">
-        <div class="hero-content">
-          <div class="left-side">
-            <div>
-              <h1>This website is awesome</h1>
-              <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+    <div class="layout l2">
+      <div class="content-2">
+        <div class="info">
+          <div class="info-title">
+            <h2>Some random information.</h2>
+          </div>
+          <ul>
+            <li>
+              <div class="img-back"></div>
+              <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li>
+              <div class="img-back"></div>
+              <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li>
+              <div class="img-back"></div>
+              <p>this is some subtext under an illustration or image</p>
+            </li>
+            <li>
+              <div class="img-back"></div>
+              <p>this is some subtext under an illustration or image</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <div class="layout l3">
+      <div class="content-3">
+        <div class="quote">
+          <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+          <p class="quote-author">-Thor, God of Thunder</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="layout l4">
+      <div class="content-4">
+        <div class="cta">
+          <div class="cta-back">
+            <div class="cta-text">
+              <p class="cta-title">Call to action! It's time!</p>
+              <p class="cta-desc">Sign up for our product by clicking that button right over there!</p>
             </div>
             <button>Sign up</button>
           </div>
-          <div class="right-side"></div>
         </div>
       </div>
     </div>
-    <div class="empty"></div>
-  </div>
 
-  <div class="layout-2">
-    <div class="empty-2"></div>
-    <div class="content-2">
-      <div class="info">
-        <div class="info-title">
-          <h2>Some random information.</h2>
-        </div>
-        <ul>
-          <li>
-            <div class="img-back"></div>
-            <p>this is some subtext under an illustration or image</p>
-          </li>
-          <li>
-            <div class="img-back"></div>
-            <p>this is some subtext under an illustration or image</p>
-          </li>
-          <li>
-            <div class="img-back"></div>
-            <p>this is some subtext under an illustration or image</p>
-          </li>
-          <li>
-            <div class="img-back"></div>
-            <p>this is some subtext under an illustration or image</p>
-          </li>
-        </ul>
-      </div>
+    <div class="footer">
+      <p>Copyright &copy; The Odin Project 2021</p>
     </div>
-    <div class="empty-2"></div>
-  </div>
-
-  <div class="layout-3">
-    <div class="empty-3"></div>
-    <div class="content-3">
-      <div class="quote">
-        <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-        <p class="quote-author">-Thor, God of Thunder</p>
-      </div>
-    </div>
-    <div class="empty-3"></div>
-  </div>
-
-  <div class="layout-4">
-    <div class="empty-4"></div>
-    <div class="content-4">
-      <div class="cta">
-        <div class="cta-back">
-          <div class="cta-text">
-            <p class="cta-title">Call to action! It's time!</p>
-            <p class="cta-desc">Sign up for our product by clicking that button right over there!</p>
-          </div>
-          <button>Sign up</button>
-        </div>
-      </div>
-    </div>
-    <div class="empty-4"></div>
-  </div>
-
-  <div class="footer">
-    <p>Copyright &copy; The Odin Project 2021</p>
-  </div>
   </body>
 </html>
